--- a/views/mobile.jade
+++ b/views/mobile.jade
@@ -1,7 +1,12 @@
 | Mobile
+
 script
   var socket = io.connect()
   var id;
   socket.emit('joinSession', #{sessionId}, function () {
-    $(body).append("You're connected to a session");
+    $('body').append("You're connected to a session");
+    $('body').append('<button>Press Me</button');
+    $('button').click(function() {
+      socket.emit('buttonPressed');
+    });
   });
