--- a/views/index.jade
+++ b/views/index.jade
@@ -14,3 +14,6 @@ script
     $('#qr-container').hide();
     $('#video-container').show();
   });
+  socket.on('buttonPressed', function() {
+    $('body').append('button pressed' + new Date);
+  });
