--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -75,6 +75,6 @@
     var seconds = Math.ceil(divisor_for_seconds);
 
     var msecs = Math.ceil((secs % 1) * 100);
-    return "" + hours + ':' + (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds + '.' + (msecs < 10 ? '0' : '') msecs;
+    return "" + hours + ':' + (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds + '.' + (msecs < 10 ? '0' : '') + msecs;
 }
 </script>
