--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -6,7 +6,7 @@
       <div class="progress progress-success" id='button'>
         <div class="bar btn-success" style="width: 33%;"> </div>
         <div class="timestamp">
-        <span id='time-code'>01:05</span> / <span id='duration'>30:35</span><br />
+        <span id='time-code'>0:00:00.0</span> / <span id='duration'>0:00:00.0</span><br />
         <span style="font-size:18px;">click to bookmark this moment</span>
         </div>
       </div>
@@ -46,6 +46,7 @@
   var socket = io.connect()
   var timeCodeEl = $('#time-code');
   var currentTime = 0;
+  var duration = 0;
   var id;
   socket.emit('joinSession', <%= sessionId %>, function () {
     $('#button').click(function() {
@@ -56,10 +57,14 @@
 
   socket.on('timeCode', function (time) {
     currentTime = time;
+
+    var percent = Math.ceil((time/duration) * 100);
+    $('.bar').css('width', percent + "%");
     timeCodeEl.html(timeToCode(time));
   });
 
   socket.on('videoDuration', function(time) {
+    duration = time;
     $('#duration').html(timeToCode(time));
   });
 
