--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,44 @@
-<div id="qr-container">
+<div id="qr-container" style="position:relative;">
   <img id="qr" />
-  <h2>scan me</h2>
 </div>
 <div id="video-container" style="display:none">
   <div id="video"><video id='videoel' src="/3011hack.mp4" controls /></div>
 </div>
 <ul id="bookmarks"></ul>
-<script src="/jquery.jplayer.min.js"></script>
+<ul id="notifications"></ul>
+<style>
+  body {
+    background: #333;
+    color: #ddd;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.7);
+  }
+  #qr-container {
+    width: 150px;
+    margin: 0 auto;
+    text-align: center;
+    background: #fff;
+    border-radius: 200px;
+    height: 150px;
+    padding: 50px;
+    box-shadow: 0 0 2px #000;
+  }
+  #video-container {
+    postition: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  #video {
+    width: 640px;
+    margin: 0 auto;
+  }
+</style>
 <script>
   var socket = io.connect();
   var videoEl = $('#videoel')[0];
   var bookmarks = $('#bookmarks');
+  var notifications = $('#notifications');
   var currentTime = 0.0;
   var id;
   socket.emit('newClient', function (myId) {
@@ -18,14 +46,25 @@
     $('#qr').attr("src", "http://chart.googleapis.com/chart?cht=qr&chs=150x150&choe=UTF-8&chld=H&chl=" + "http://sockets.chrisrhoden.com/mobile?session_id=" + id)
   });
   socket.on('partnerConnected', function() {
-    $('#qr-container').hide();
-    $('#video-container').show();
-    setInterval(function() { if (currentTime > videoEl.currentTime || currentTime < videoEl.currentTime) {
-      socket.emit('timeCode', currentTime = videoEl.currentTime) } }, 50);
+    $('#qr-container').animate({'top': -400}, function() {
+      $(this).hide();
+      $('body').css({background:"#000"})
+      $('#video-container').fadeIn( function () {
+        videoEl.play();
+      });
+    });
+    setInterval(function() { if (currentTime != videoEl.currentTime) {
+      socket.emit('timeCode', currentTime = videoEl.currentTime) } }, 200);
     socket.emit('videoDuration', videoEl.duration);
   });
   socket.on('addBookmark', function(time) {
-    bookmarks.append('<li>' + time + '</li>');
+    bookmarks.append("<li>" + timeToCode(time) + '</li>');
+    var notification = $(document.createElement('li')).append("Added bookmark: " + timeToCode(time));
+    notifications.append(notification);
+    setTimeout(function() { notification.animate({'opacity':0}, function () {
+      $(this).slideUp();
+    })}, 1000);
   });
 </script>
+
 
