--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -31,8 +31,10 @@
   socket.emit('joinSession', <%= sessionId %>, function () {
     $('#button').click(function() {
       socket.emit('addBookmark', currentTime);
-      $('#bookmarks').append("<tr><td>" + timeToCode(currentTime) +  "</td><td><a href='"+getLinkForTime(currentTime)+"'>" +
-        getTextForTime(currentTime) +"</a></td></tr>");
+      $('#bookmarks').append("<tr><td>" + timeToCode(currentTime) + "</td><td>" +
+        getTextForTime(currentTime) +"<br />"+
+        makeLinksForTime(currentTime) +
+        "</td></tr>");
     });
   });
 
@@ -51,5 +53,9 @@
 
   function switchVideo() {
     socket.emit('switchVideo');
+  }
+
+  function scanTo(time) {
+    socket.emit('scanTo', time);
   }
 </script>
