--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -54,5 +54,28 @@ body {
 }
 
 video {
-  cursor: url('/images/blank.cur'),url('/images/blank.gif'),url('/images/blank.png'),url('/images/blank.xbm'),none;
+  cursor: url('blank.cur'),url('blank.gif'),url('blank.png'),url('blank.xbm'),none;
 }
+
+#lower-third {
+  background: rgb(86,16,20);
+  color: #fff;
+  font-family: "Helvetica Neue";
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 100%;
+  height: 20%;
+}
+
+#lower-third img {
+  position: absolute;
+  left: 10px;
+  width: 130px;
+}
+
+#lower-third h1, #lower-third h2 {
+  margin-left: 150px;
+  margin-bottom: 10px
+}
+
