--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -61,7 +61,7 @@ video {
 }
 
 #lower-third {
-
+  display: none;
   background: rgba(200, 0, 0, 0.7);
   color: #fff;
   font-family: "Helvetica Neue";
